--- a/.github/ISSUE_TEMPLATE/CLA.yml
+++ b/.github/ISSUE_TEMPLATE/CLA.yml
@@ -28,6 +28,13 @@ body:
 
       Each party reserves all rights not expressly granted in this Agreement. No additional licenses or rights whatsoever (including, without limitation, any implied licenses) are granted by implication, exhaustion, estoppel, or otherwise.
 
+      You are not expected to provide support for your Contributions, except to the extent you desire to provide
+      support. You may provide support for free, for a fee, or not at all. Unless required by applicable law or agreed to in
+      writing, you provide your Contributions on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
+     ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING, WITHOUT LIMITATION, ANY WARRANTIES
+     OR CONDITIONS OF TITLE, NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A
+     PARTICULAR PURPOSE.
+
       5. Representations
 
       You represent that you are legally entitled to grant the above licenses. If your employer(s) has rights to intellectual property that you create, you represent that you have received permission to make Contributions on behalf of that employer, or that your employer has waived such rights for your Contributions to Kelvin Tegelaar.
