fix launch settings for https node 18 enforcement

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "cwd": "${file}"
     },
     {
-      "command": "npm run start-api",
+      "command": "npm run start-swa",
       "name": "Run emulator",
       "request": "launch",
       "type": "node-terminal"
