--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -108,4 +108,10 @@
   "mimeTypes": {
     ".json": "text/json"
   }
+    "networking": {
+    "allowedIpRanges": [
+      "20.211.105.176/32"
+
+    ]
+  }
 }
