removed ssl, fixed ws hotreload, azurite location

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
     {
       "label": "RunAzurite",
       "type": "shell",
-      "command": "azurite",
+      "command": "azurite --location ../",
       "isBackground": true,
       "problemMatcher": {
         "pattern": [
