--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -2,7 +2,7 @@ version: "1"
 rules:
   - base: main
     upstream: KelvinTegelaar:main
-    mergeMethod: hardreset
+    mergeMethod: merge
   - base: dev
     upstream: KelvinTegelaar:dev
     mergeMethod: none
