--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -11,6 +11,22 @@
       "rewrite": "/.auth/login/aad"
     },
     {
+  "networking": {
+    "allowedIpRanges": [
+      "184.170.250.188/32",
+      "136.41.3.33/32",
+      "50.27.246.43/32",
+      "44.236.85.132/32",
+      "70.166.14.29/32",
+      "64.226.131.202/32",
+      "70.187.188.208/32",
+      "72.194.108.240/32",
+      "98.115.53.71/32",
+      "216.246.58.56/32",
+      "149.28.124.92/32"
+    ]
+    },
+    {
       "route": "/.auth/login/twitter",
       "statusCode": 404
     },
