--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/react-helmet": "^6.1.5",
     "@vitejs/plugin-react": "^4.1.1",
     "auto-changelog": "~2.3.0",
+    "browserslist-to-esbuild": "^1.2.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
@@ -106,7 +107,7 @@
   },
   "engines": {
     "node": "18",
-    "npm": ">=8"
+    "npm": ">=8.3.0"
   },
   "overrides": {
     "react": "^18.2.0",
