--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "javascript-time-ago": "^2.5.9",
     "jspdf": "^2.4.0",
     "jspdf-autotable": "^3.5.23",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
