--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "javascript-time-ago": "^2.5.9",
     "jspdf": "^2.4.0",
     "jspdf-autotable": "^3.5.23",
-    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
@@ -93,10 +92,14 @@
     "@vitejs/plugin-react": "^4.1.1",
     "auto-changelog": "~2.3.0",
     "browserslist-to-esbuild": "^1.2.0",
-    "eslint": "^8.0.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-custom-alias": "^1.3.2",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "husky": "^7.0.4",
     "postcss-scss": "^4.0.3",
     "prettier": "2.4.1",
@@ -105,7 +108,8 @@
     "stylelint": "^14.3.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-order": "^5.0.0",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "engines": {
     "node": "18",
