--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "AGPL-3.0",
   "author": "CIPP Contributors",
   "scripts": {
-    "build": "vite build",
+    "build": "echo react-scripts build && vite build",
     "changelog": "auto-changelog --starting-version 3.0.0 --commit-limit false --hide-credit",
     "lint": "eslint \"src/**/*.js\"",
     "start": "vite",
