--- a/src/data/Extensions.json
+++ b/src/data/Extensions.json
@@ -112,7 +112,7 @@
     "type": "NinjaOne",
     "cat": "Documentation & Monitoring",
     "forceSyncButton": true,
-    "helpText": "NOTE: This integration requires version 5.6 of NinjaOne. Current release dates are: ca.ninjarmm.com - 28th November, oc.ninjarmm.com - 29th November, eu.ninjarmm.com - 4th December, us2.ninjarmm.com - 12th December, app.ninjarmm.com - 13th December. These dates are subject to change. Please consult https://status.ninjaone.com for the latest information. This integration allows you to populate custom fields with Tenant information, monitor device compliance state, document other items and generate relationships inside NinjaOne.",
+    "helpText": "NOTE: This integration requires version 5.6 of NinjaOne, which rolls out regionally between the end of November and mid-December. This integration allows you to populate custom fields with Tenant information, monitor device compliance state, document other items and generate relationships inside NinjaOne.",
     "SettingOptions": [
       {
         "type": "input",
