--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -85,7 +85,15 @@
     {
       "route": "*",
       "allowedRoles": ["admin", "editor", "readonly", "reader"]
-    }
+    },
+	{
+		"route": "/api/RemoveUser"
+		"allowedRoles": ["admin", "editor", "readonly", "reader", "authenticated", "helpdesk"]
+	},
+	{
+		"route": "/api/AddUser"
+		"allowedRoles": ["admin", "editor", "readonly", "reader", "authenticated", "helpdesk"]
+	}
   ],
   "navigationFallback": {
     "rewrite": "index.html",
