--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -87,13 +87,9 @@
       "allowedRoles": ["admin", "editor", "readonly", "reader"]
     },
 	  {
-		  "route": "/api/RemoveUser",
-		  "allowedRoles": ["admin", "editor", "readonly", "reader", "authenticated", "helpdesk"]
-	  },
-	  {
-		  "route": "/api/AddUser",
-		  "allowedRoles": ["admin", "editor", "readonly", "reader", "authenticated", "helpdesk"]
-	  }
+      "route": "/api/AddSharedMailbox",
+      "allowedRoles": ["helpdesk","admins","editors"]
+    }
   ],
   "navigationFallback": {
     "rewrite": "index.html",
