--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rjsf/core": "^5.12.1",
     "@rjsf/utils": "^5.12.1",
     "@rjsf/validator-ajv8": "^5.12.1",
+    "@uiw/react-json-view": "^2.0.0-alpha.23",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
     "chart.js": "^3.5.1",
